Synchronize local changes

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dat"]
 	path = dat
 	url = https://gitlab.sickcn.net/GBC02/bu29/RPE/dat.git
+[submodule "SRC/dat"]
+	path = SRC/dat
+	url = https://gitlab.sickcn.net/GBC02/bu29/RPE/dat.git
